
  * Colin Watson
    - Build-depend on iso-codes. Closes: #307500
    - Remove debian/templates.tmp, debian/iso-codes, and debian/pobuild on
      clean.
    - Don't ship debian/choose-mirror.templates in the source package; it
      can be built at build time.
    - Convert translations to UTF-8 before merging them. Fixes Croatian,
      French, and Polish templates.
  * Joey Hess
    - Rename README.new to README.
    - Make sort-countries executable and remove chmod stuff in debian/rules.
    - Remove various obsolete comments.
    - Rename makeheader.pl to mirrorlist to reflect its expanded capabilities.
    - Some code cleanup in mirrorlist.
    - Further improve file cleanups.
    - Fix mktemplates to operate on the existing
      debian/choose-mirror.templates instead of blowing away that file
      by operating on debian/choose-mirror.templates-in.

 -- Christian Perrier <bubulle@debian.org>  Sun,  1 May 2005 21:51:06 +0200

choose-mirror (1.08) unstable; urgency=low

  * Colin Watson
    - Build-depend on locales.
    - Exec choose-mirror in postinst (saves a process).
  * Christian Perrier
    - Add self to Uploaders
    - debian/rules: Activate the code to grab country names
      and translations from iso-codes, saving double work to
      translators.
      Closes: #242689
    - templates-in: renamed to choose-mirror.templates-in
    - choose-mirror.templates-in:
      Add details about specifying an alternate port for
      HTTP and FTP mirror hostnames.
      Closes: #253575

 -- Christian Perrier <bubulle@debian.org>  Sun,  1 May 2005 20:12:37 +0200

choose-mirror (1.07) unstable; urgency=low

  * Updated translations: 
    - Bulgarian (bg.po) by Ognyan Kulev
    - Bosnian (bs.po) by Safir Šećerović
    - Catalan (ca.po) by Guillem Jover
    - Welsh (cy.po) by Dafydd Harries
    - Greek, Modern (1453-) (el.po) by Greek Translation Team
    - Finnish (fi.po) by Tapio Lehtonen
    - French (fr.po) by French Team