@@ -16,6 +16,18 @@ _Description: Protocol for files download:
  Please select the file download protocol. If unsure, select "http"; it is less
  prone to problems involving firewalls.
 
+Template: mirror/http/countries
+Type: select
+_Choices: enter information manually
+#  Translators, you must not translate this value, but you can change it
+#  to one of those listed above, e.g. msgstr "GB".  Square brackets are
+#  ignored and appear here only to distinguish this msgid from the same
+#  one in the Choices field.
+_Default: US[ Default value for http]
+_Description: Debian archive mirror country:
+ The goal is to find a mirror of the Debian archive that is close to you on the network -- be
+ aware that nearby countries, or even your own, may not be the best choice.
+
 Template: mirror/http/mirror
 Type: select
 Choices: ${mirrors}
@@ -50,6 +62,18 @@ _Description: HTTP proxy information (blank for none):
  .
  The proxy information should be given in the standard form of
  "http://[[user][:pass]@]host[:port]/"
+
+Template: mirror/ftp/countries
+Type: select
+_Choices: enter information manually
+#  Translators, you must not translate this value, but you can change it
+#  to one of those listed above, e.g. msgstr "GB".  Square brackets are
+#  ignored and appear here only to distinguish this msgid from the same
+#  one in the Choices field.
+_Default: US[ Default value for ftp]
+_Description: Debian archive mirror country:
+ The goal is to find a mirror of the Debian archive that is close to you on the network -- be
+ aware that nearby countries, or even your own, may not be the best choice.
 
 Template: mirror/ftp/mirror
 Type: select
