@@ -5,11 +5,6 @@ build-stamp:
 	dh_testdir
 	$(MAKE) small
 
-	# Grab ISO codes from iso-codes package
-	./get-iso-codes
-	# Build the templates
-	./mktemplates
-
 	touch build-stamp
 
 clean:
