@@ -33,9 +33,9 @@ printf " Done.\n"
 printf "Insert the lists of choices into the templates file..."
 # Now put this list as the choices in the templates
 # and defined this field as translatable (__Choices hack)
-cat debian/choose-mirror.templates | \
-    perl -pe 's/\@httpcountrylist\@/'"$HTTPCHOICES"'/g' | \
-    perl -pe 's/\@ftpcountrylist\@/'"$FTPCHOICES"'/g' | \
+cat debian/choose-mirror.templates-in | \
+    perl -pe 'if (m,http/countries$,) { $http = 1; } elsif ($http and /enter information manually$/) { s/$/, '"$HTTPCHOICES"'/; $http = 0; }' | \
+    perl -pe 'if (m,ftp/countries$,)  { $ftp  = 1; } elsif ($ftp  and /enter information manually$/) { s/$/, '"$FTPCHOICES"'/;  $ftp  = 0; }' | \
     sed "/^_Choices: enter/s/_Choices:/__Choices:/g" \
     >debian/templates.tmp
 printf " Done.\n"
