@@ -8,6 +8,9 @@ choose-mirror (1.09) UNRELEASED; urgency=low
       can be built at build time.
     - Convert translations to UTF-8 before merging them. Fixes Croatian,
       French, and Polish templates.
+    - Move mirror/http/countries and mirror/ftp/countries into
+      debian/choose-mirror.templates-in (without the generated list of
+      country codes) so that they still get translated.
   * Joey Hess
     - Rename README.new to README.
     - Make sort-countries executable and remove chmod stuff in debian/rules.
